addon/styles/addon.css
@import 'sanitize.css';
@import 'sanitize.css/typography.css';
@import 'sanitize.css/forms.css';
@import 'ember-mobile-bar';

:global {
  body, .mobile-menu-wrapper__content {
    background: #FAFBFC;
  }

  body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
    color: #3c484e;
  }

  h1, h2, h3, h4, h5, h6 {
    margin-top: 0;
    color: #090a0b;
  }

  main {
    padding-top: 45px;

    .main-footer {
      display: flex;
      justify-content: center;
      align-items: center;
      height: 10rem;

      img {
        width: 50px;
      }
    }
  }

  p {
    margin-top: 0;
  }

  .mobile-menu-wrapper {
    overflow: hidden;
    min-width: 100vw;

    .mobile-menu-wrapper__content > * {
      transition: opacity 0.3s;
    }

    .mobile-menu__tray {
      display: flex;
      flex-direction: column;

      @media (min-width: 768px) {
        border-right: 1px solid #CCC;
      }

      footer {
        margin-top: auto;
        font-size: 0.8em;
        text-align: center;
        color: #999;
        padding: 1rem;

        a {
          color: #666;
        }
      }
    }

    @media (max-width: 767px) {
      .mobile-menu--open ~ .mobile-menu-wrapper__content > * {
        opacity: 0.5;
      }

      .mobile-menu--open, .mobile-menu--dragging, .mobile-menu--transitioning {
        & ~ .mobile-menu-wrapper__content > *:not(.mobile-menu__mask) {
          pointer-events: none;
        }
      }
    }

    .mobile-menu__mask {
      background: rgba(0,0,0,0.1);
      height: 100%;
    }
  }

  .mobile-bar {
    z-index: 9999;
    transition: background 0.3s, color 0.3s!important;

    > header {
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding: 0.5rem;

      a {
        height: 32px;
        line-height: 32px;
        color: #333;
        text-decoration: none;
      }

      button {
        border: none;
        transition: opacity 0.15s;

        &:hover {
          opacity: 0.3;
        }
      }

      .mobile-bar__title {
        font-weight: 500;

        transition: visibility 0.3s linear, opacity 0.3s;
      }

      .fake-toggle {
        width: 32px;
      }
    }

    h1 {
      margin: 0;
      font-size: 0.9rem;
      text-transform: uppercase;
    }

    &--top {
      background: #FFF;
      border-bottom: 1px solid #CCC;
      position: sticky;
      top: 0;
    }
  }

  .post-content-image .kg-image {
    width: 100%;
  }

  .page-title {
    text-align: center;
    margin-bottom: 0;
    padding-top: 2rem;
  }

  .post-feed {
    display: grid;
    padding: 0 1rem;
    grid-template-columns: 1fr;
    grid-gap: 1.5rem;
    max-width: 60rem;
    margin: 0 auto;

    @media (min-width: 768px) {
      grid-template-columns: 1fr 1fr;
    }
  }

  .author-header {
    margin: 5rem 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .author-meta {
    padding-bottom: 3rem;
  }

  body.detector-visible {
    .mobile-bar {
      &.mobile-bar--top {
        background: transparent;
        border-bottom-color: transparent;

        .mobile-bar__title {
          visibility: hidden;
          opacity: 0;
        }
      }
    }
  }

  body.detector-hidden {
    .mobile-bar {
      &.mobile-bar--top {
        background: #FFF;
        border-bottom-color: #CCC;

        .mobile-bar__title {
          visibility: visible;
          opacity: 1;
        }
      }
    }
  }
}

